--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
             <article>
               <img src="images/martin-sanchez-igSCxtyORzY-unsplash.jpg" alt="">
                 <h2>water bottle</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus est placeat quia, reprehenderit quas et aliquid dolores numquam veniam sequi at deserunt ea praesentium minima ducimus commodi, veritatis quidem quod maiores fugit soluta. Asperiores error at iure alias dolores.</p>
+                <p>A water bottle is a portable container used to carry water or other beverages for on-the-go hydration. It comes in various sizes, shapes, and materials, from plastic to metal and glass. Reusable water bottles are environmentally friendly alternatives to disposable ones and can help reduce waste and promote sustainability.</p>
             </article>    
             <article>
               <img src="images/pexels-gonzalo-acuña-10923070.jpg" alt="">
                 <h2>ball</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus est placeat quia, reprehenderit quas et aliquid dolores numquam veniam sequi at deserunt ea praesentium minima ducimus commodi, veritatis quidem quod maiores fugit soluta. Asperiores error at iure alias dolores.</p>
+                <p>A football's ball, also known as a soccer ball, is a spherical ball made of leather or synthetic materials used in the game of football. It has a circumference of 68-70 cm and a weight of 410-450 grams. The ball's design features black and white pentagon shapes that make it easy to see and follow during the game. A properly inflated and maintained football can help players achieve better control, accuracy, and performance.</p>
             </article>    
             <article>
               <img src="images/pexels-fabricio-trujillo-54567.jpg" alt="">
                 <h2>footbal field</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus est placeat quia, reprehenderit quas et aliquid dolores numquam veniam sequi at deserunt ea praesentium minima ducimus commodi, veritatis quidem quod maiores fugit soluta. Asperiores error at iure alias dolores.</p>
+                <p>A football field is a rectangular playing surface used for the game of football. It measures 100-130 yards in length and 50-100 yards in width, with goalposts on either end. The field is typically made of natural or artificial grass, and its dimensions and markings are standardized for competitive play. Football fields can be found in various settings, from school and community sports facilities to large stadiums for professional teams.</p>
             </article>    
             <article>
               <img src="images/pexels-pixabay-34514.jpg" alt="">
                 <h2>runners</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus est placeat quia, reprehenderit quas et aliquid dolores numquam veniam sequi at deserunt ea praesentium minima ducimus commodi, veritatis quidem quod maiores fugit soluta. Asperiores error at iure alias dolores.</p>
+                <p>Runners are individuals who engage in the sport of running as a form of exercise, competition, or leisure activity. They lace up their shoes and hit the pavement, trails, or tracks to improve cardiovascular fitness, build endurance, and experience the physical and mental benefits of running. Runners come from diverse backgrounds and participate in various events, from casual jogs to marathons and ultramarathons, embracing the joy and challenge of this popular athletic pursuit.</p>
             </article>    
             <article>
               <img src="images/viktor-bystrov-mn7eTQFHNHc-unsplash.jpg" alt="">
                 <h2>cyclist</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus est placeat quia, reprehenderit quas et aliquid dolores numquam veniam sequi at deserunt ea praesentium minima ducimus commodi, veritatis quidem quod maiores fugit soluta. Asperiores error at iure alias dolores.</p>
+                <p>Cyclists are individuals who engage in the sport or recreational activity of cycling. They ride bicycles, either for leisure, commuting, or competitive purposes. Cyclists enjoy the freedom of pedaling through scenic routes, challenging themselves with steep climbs, and experiencing the exhilaration of speed. Cycling offers both physical fitness benefits and a means of eco-friendly transportation.</p>
             </article>    
         </main>
     </div>
